--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,22 @@
-.DS_Store
-*~
-*.iws
-*.sublime-workspace
-node_modules
-
-package-lock.json
-yarn-error.log*
-lerna-debug.log
-scratch
-lib
-tsconfig.tsbuildinfo
-modules/*/LICENSE.TXT
-
-/dist
-/js
-/tmp
+/node_modules
+/public/build
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+/images
+/admin/uploads
+/admin/resources
+../admin/uploads
+.env
+.env.backup
+.env.production
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+auth.json
+npm-debug.log
+yarn-error.log
+/.fleet
 /.idea
-/uploads/
-/img/
-
+/.vscode
